Сделана базовая модель сервера аутент

--- a/IdentityServer/Views/Authorize/Authorize.cshtml
+++ b/IdentityServer/Views/Authorize/Authorize.cshtml
@@ -1,4 +1,4 @@
-﻿@model LoginInputModel
+﻿@model IdentityServer.Models.LoginInputModel
 <form asp-action="Login" method="post">
     <input type="hidden" name="ReturnUrl" value="@Model.ReturnUrl" />
     <div>
