--- a/rfactor_auth.client/src/styles/Header.css
+++ b/rfactor_auth.client/src/styles/Header.css
@@ -18,11 +18,12 @@
     display: flex;
     align-items: center;
     gap: 10px;
+
 }
 .header-logo {
     margin-right: auto;
-    margin-left:15px;
-    
+    margin-left: 15px;
+    cursor: pointer;
 }
 
 .header-title {
