--- a/rfactor_auth.client/src/styles/AboutUs.css
+++ b/rfactor_auth.client/src/styles/AboutUs.css
@@ -1,9 +1,9 @@
 body {
-  background: url('/public/images/background.jpg') center/cover no-repeat, linear-gradient(to right, #7f8eaa, #2a5298);
-  color: white;
-  margin: 0;
-  height: 100%;
-  font-family: 'VTB Group UI', sans-serif;
+    background: url('/public/images/background.svg') center/cover repeat, linear-gradient(to right, #7f8eaa, #2a5298);
+    color: white;
+    margin: 0;
+    height: 100%;
+    font-family: 'VTB Group UI', sans-serif;
 }
 
 .about-container {
@@ -37,7 +37,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url('/public/images/background.jpg') center/cover no-repeat;
+  background: url('/public/images/background.jpg') center/cover repeat;
   opacity: 0.8; 
   z-index: 0;
   pointer-events: none;
