очень много все

--- a/IdentityServer/Views/Shared/Error.cshtml
+++ b/IdentityServer/Views/Shared/Error.cshtml
@@ -1,1 +1,22 @@
-﻿<p>Error</p>
+﻿<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <title>Error</title>
+    <link rel="stylesheet" href="@Url.Content("~/css/site.css")" />
+    <link rel="stylesheet" href="@Url.Content("~/css/error.css")" />
+
+</head>
+<body>
+    <div id="error-container">
+        <div id="error-text">
+            <span class="letter">E</span>
+            <span class="letter">R</span>
+            <span class="letter">R</span>
+            <span class="letter">O</span>
+            <span class="letter">R</span>
+        </div>
+        <img id="error-image" src="~/images/error_logo.png" alt="Error Icon">
+    </div>
+</body>
+</html>
