--- a/rfactor_auth.client/src/styles/Account.css
+++ b/rfactor_auth.client/src/styles/Account.css
@@ -23,7 +23,8 @@ body {
     border-radius: 8px;
     box-shadow: 0 0 40px rgba(0, 0, 0, 0.3);
     backdrop-filter: blur(20px);
-    gap:20px;
+    gap: 20px;
+    border: 2px solid #0558DE;
 }
 
 
@@ -126,6 +127,8 @@ input {
     position: absolute;
     top: 10px;
     right: 10px;
+    gap:10px;
+    display:inline-flex
 }
 
 .top-right-button {
